Fix the back button colors to make sure they appear

--- a/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
@@ -534,8 +534,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Yb4-In-ycU"/>
-        <segue reference="uTP-je-CRm"/>
+        <segue reference="fyC-YF-nEp"/>
+        <segue reference="jcO-rt-1wY"/>
         <segue reference="tSf-t1-2MO"/>
     </inferredMetricsTieBreakers>
 </document>
