--- a/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="v6n-B9-8t3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A3028" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="v6n-B9-8t3">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Stop Table View Controller-->
@@ -414,11 +414,27 @@
                         <viewControllerLayoutGuide type="top" id="nTi-hH-Bfk"/>
                         <viewControllerLayoutGuide type="bottom" id="gCY-c7-jFe"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="nbf-XI-cDw" customClass="GMSMapView">
+                    <view key="view" contentMode="scaleToFill" id="nbf-XI-cDw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pdl-qE-2be">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="5wh-qK-Mbq" id="UzL-Ss-SUk"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="pdl-qE-2be" firstAttribute="leading" secondItem="nbf-XI-cDw" secondAttribute="leading" id="OgS-J1-yxQ"/>
+                            <constraint firstAttribute="trailing" secondItem="pdl-qE-2be" secondAttribute="trailing" id="dyO-xk-bQC"/>
+                            <constraint firstItem="nTi-hH-Bfk" firstAttribute="top" secondItem="pdl-qE-2be" secondAttribute="bottom" constant="-504" id="i8U-t2-xE3"/>
+                            <constraint firstItem="gCY-c7-jFe" firstAttribute="top" secondItem="pdl-qE-2be" secondAttribute="bottom" constant="-49" id="iFT-Ov-CU8"/>
+                            <constraint firstItem="pdl-qE-2be" firstAttribute="top" secondItem="nbf-XI-cDw" secondAttribute="top" id="lYs-0U-FGQ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FsR-Gf-r8R">
                         <nil key="title"/>
@@ -437,7 +453,7 @@
                         </segmentedControl>
                     </navigationItem>
                     <connections>
-                        <outlet property="vanMapView" destination="nbf-XI-cDw" id="lLu-iw-I9e"/>
+                        <outlet property="vanMapView" destination="pdl-qE-2be" id="DLx-0D-jce"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fuu-Ds-vp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
