--- a/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Vandy Vans/Vandy Vans/en.lproj/MainStoryboard_iPhone.storyboard
@@ -430,10 +430,9 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="pdl-qE-2be" firstAttribute="leading" secondItem="nbf-XI-cDw" secondAttribute="leading" id="OgS-J1-yxQ"/>
+                            <constraint firstItem="pdl-qE-2be" firstAttribute="top" secondItem="nbf-XI-cDw" secondAttribute="top" id="YRo-J3-B0t"/>
                             <constraint firstAttribute="trailing" secondItem="pdl-qE-2be" secondAttribute="trailing" id="dyO-xk-bQC"/>
-                            <constraint firstItem="nTi-hH-Bfk" firstAttribute="top" secondItem="pdl-qE-2be" secondAttribute="bottom" constant="-504" id="i8U-t2-xE3"/>
                             <constraint firstItem="gCY-c7-jFe" firstAttribute="top" secondItem="pdl-qE-2be" secondAttribute="bottom" constant="-49" id="iFT-Ov-CU8"/>
-                            <constraint firstItem="pdl-qE-2be" firstAttribute="top" secondItem="nbf-XI-cDw" secondAttribute="top" id="lYs-0U-FGQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FsR-Gf-r8R">
